--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -1,9 +1,10 @@
-<p>
-  <input type="checkbox" name="isDone" {{#if todo.isDone}} checked {{/if}} disabled> 
-  {{ todo.name }}
-</p>
-<a href="/todos/{{ todo._id }}/edit">edit</a>
-<a href="/">back</a>
 <form action="/todos/{{ todo._id }}?_method=Delete" method="POST" style="display: inline;">
-  <button type="submit">delete</button>
+  <div class="input-group">
+    <div class="input-group-text">
+      <input type="checkbox" class="form-check-input mt-0" name="isDone" {{#if todo.isDone}} checked {{/if}} disabled> 
+    </div>
+    <input class="form-control" type="text" name="name" placeholder="name"  disabled value="{{ todo.name }}">
+    <a class="btn btn-success" href="/todos/{{ todo._id }}/edit">edit</a>
+    <button class="btn btn-danger" type="submit">delete</button>
+  </div>
 </form>
