--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,7 +11,11 @@
   <header>
     <nav class="navbar navbar-dark justify-content-between bg-primary" style="padding: 8px 16px;">
       <a class="navbar-brand" href="/">Todo List</a>
-      <a class="btn btn-outline-light" href="/todos/new">Create</a>
+      {{#if isAuthenticated}}
+      <a class="btn btn-outline-light" href="/users/logout">Logout</a>
+      {{else}}
+      <a class="btn btn-outline-light" href="/users/login">Login</a>
+      {{/if}}
     </nav>
   </header>
   <main>
