--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,7 +10,10 @@
 <body class="bg-light">
   <header>
     <nav class="navbar navbar-dark justify-content-between bg-primary" style="padding: 8px 16px;">
-      <a class="navbar-brand" href="/">Todo List</a>
+      <a class="navbar-brand" href="/">
+        {{#if isAuthenticated}}{{ user.name }}'s {{/if}}
+        Todo List
+      </a>
       {{#if isAuthenticated}}
       <a class="btn btn-outline-light" href="/users/logout">Logout</a>
       {{else}}
